k8s-openshift/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watchworth-frontend
spec:
  replicas: 2  
  selector:
    matchLabels:
      app: watchworth-frontend
  template:
    metadata:
      labels:
        app: watchworth-frontend
    spec:
      containers:
        - name: watchworth-frontend
          image: cvsudeep/watchworthreact:latest
          ports:
            - containerPort: 8080
          readinessProbe:  # Ensure pod is ready before it is considered healthy
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:  # Ensure pod is restarted if it becomes unresponsive
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:  # Optional: Add resource requests and limits to prevent resource-related issues
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
