k8s-openshift/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: watchworth-frontend
spec:
  selector:
    app: watchworth-frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
