k8s-openshift/Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: watchworth-frontend
spec:
  to:
    kind: Service
    name: watchworth-frontend
  port:
    targetPort: 8080
  tls:
    termination: edge
